--- a/src/app.css
+++ b/src/app.css
@@ -2,15 +2,33 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Readex Pro', sans-serif;
 }
+/* 
+font-family: 'Inknut Antiqua', serif;
+font-family: 'Lato', sans-serif;
+font-family: 'Londrina Solid', cursive;
+font-family: 'Readex Pro', sans-serif;
+font-family: 'Roboto Mono', monospace; */
 
 header{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    align-items: center;
     text-align: center;
+    margin-bottom: 50px;
+}
+
+.logo {
+    width: 5%;
 }
 
 .main-container {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap-reverse;
+    margin-bottom: 50px;
 }
 .form-container {
     width: 30%;
@@ -31,6 +49,9 @@ header{
 
 .inputs{
     display: block;
+    border: 0;
+    background-color: rgb(247, 245, 244);
+    border-bottom: 1px solid black;
     width: 100%;
     margin-top: 10px;
 }
@@ -54,18 +75,154 @@ header{
 .preview-container{
     width: 30%;
 }
-.card-preview{
+/* .card-preview{
     width: 20rem;
-    height: 500px;
+    height: 600px;
     display: flex;
     text-align: center;
     align-items: center;
     justify-content:space-around;
     flex-direction: column;
     border: 1px solid black;
+} */
+
+.card-preview{
+    display: flex;
+    flex-direction: column;
+    width: 20rem;
+    height: 600px;
+    text-align: center;
+    align-items: center;
+    justify-content:space-around;
+    background: rgb(40,40,55);
+    background: linear-gradient(344deg, rgba(40,40,55,1) 0%, rgba(16,16,18,1) 50%);
+    box-shadow: 4px 6px 14px #2F2F42;
+    border-radius: 3px;
+    color: #F9F9F9;
+    padding: 16px;
+    transition: all .3s;
+    cursor: pointer;
+   }
+   
+/* 
+.card-preview:active {
+    transform: rotateY(160deg);
+} */
+.img{
+    /* width: 100%;
+    height: 500px; */
+    width: 100%;
+    max-height:50%;
+    height: auto;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
-#img-preview{
-    width: 100%;
-    
+.list-container{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    justify-content: center;
+    color: black;
 }
+
+.card-save {
+    text-align: center;
+    margin-right: 10px;
+    height: 400px;
+    font-size: smaller;
+}
+.card-saves{
+    margin-bottom: 50px;
+    text-align: center;
+    transition: .5s;
+}
+
+.card-saves:active{
+    transform: scale(1.3);
+    transition: .5s;
+}
+.img-save {
+    width: 50%;
+}
+
+/* .button-delete{
+    width: 90%;
+} */
+
+.button-delete {
+    position: relative;
+    cursor: pointer;
+    padding: 10px 40px;
+    margin: 0px 10px 10px 0px;
+    border-radius: 3px;
+    font-size: 20px;
+    color: #FFF;
+    text-decoration: none;
+    background-color: #e9cf25;
+    background-image: linear-gradient(147deg, #dbc326 0%, #FF2525 74%); 
+    border: none;
+    text-shadow: 0px -2px #27ae60;
+    -webkit-transition: all 0.1s;
+    transition: all 0.1s;
+   }
+   
+   .button-delete:hover, .button-delete:active {
+    -webkit-transform: translate(0px,5px);
+    -ms-transform: translate(0px,5px);
+    transform: translate(0px,5px);
+    border-bottom: 1px solid #2ecc71;
+   }
+
+   .switch {
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    width: 3.5em;
+    height: 2em;
+   }
+   
+   /* Hide default HTML checkbox */
+   .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+   }
+   
+   /* The slider */
+   .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 30px;
+   }
+   
+   .slider:before {
+    position: absolute;
+    content: "";
+    height: 1.4em;
+    width: 1.4em;
+    border-radius: 20px;
+    left: 0.3em;
+    bottom: 0.3em;
+    background-color: white;
+    transition: .4s;
+   }
+   
+   input:checked + .slider {
+    background-color: #2196F3;
+   }
+   
+   input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+   }
+   
+   input:checked + .slider:before {
+    transform: translateX(1.5em);
+   }
