--- a/src/app.css
+++ b/src/app.css
@@ -3,6 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Readex Pro', sans-serif;
+    
+}
+
+body {
+    background-color: #215c87;
+    background-image: linear-gradient(135deg, #215c87 0%, #5e607b 100%);
+
 }
 /* 
 font-family: 'Inknut Antiqua', serif;
@@ -12,8 +19,9 @@ font-family: 'Readex Pro', sans-serif;
 font-family: 'Roboto Mono', monospace; */
 
 header{
+    color: whitesmoke;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 20px;
     align-items: center;
     text-align: center;
@@ -40,7 +48,9 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
+    background-color: whitesmoke;
+    border-radius: 5%;
+    box-shadow: 4px 6px 14px #2F2F42;
 }
 
 .labels{
@@ -50,7 +60,7 @@ header{
 .inputs{
     display: block;
     border: 0;
-    background-color: rgb(247, 245, 244);
+    background-color: whitesmoke;
     border-bottom: 1px solid black;
     width: 100%;
     margin-top: 10px;
@@ -73,6 +83,7 @@ header{
 }
 
 .preview-container{
+    display: flex;
     width: 30%;
 }
 /* .card-preview{
@@ -103,11 +114,16 @@ header{
     transition: all .3s;
     cursor: pointer;
    }
-   
-/* 
-.card-preview:active {
-    transform: rotateY(160deg);
-} */
+
+.description{
+    margin-bottom: 10px;
+}
+
+#super-trunfo{ 
+    font-family: 'ZCOOL QingKe HuangYou', cursive;
+    color: yellow;
+}
+
 .img{
     /* width: 100%;
     height: 500px; */
@@ -130,8 +146,12 @@ header{
 .card-save {
     text-align: center;
     margin-right: 10px;
+    width: 300px;
     height: 400px;
     font-size: smaller;
+    display: flex;
+    justify-content: center;
+    justify-content: space-between;
 }
 .card-saves{
     margin-bottom: 50px;
@@ -139,12 +159,13 @@ header{
     transition: .5s;
 }
 
-.card-saves:active{
-    transform: scale(1.3);
+.card-saves:hover{
+    transform: scale(1.1);
     transition: .5s;
 }
 .img-save {
-    width: 50%;
+    width: 100%;
+    height: 50%;
 }
 
 /* .button-delete{
@@ -160,69 +181,50 @@ header{
     font-size: 20px;
     color: #FFF;
     text-decoration: none;
-    background-color: #e9cf25;
-    background-image: linear-gradient(147deg, #dbc326 0%, #FF2525 74%); 
+    background-color: #ff3033;
+    background-image: linear-gradient(180deg, #ff3033 0%, #f5333f 100%);
+
     border: none;
     text-shadow: 0px -2px #27ae60;
     -webkit-transition: all 0.1s;
     transition: all 0.1s;
    }
    
-   .button-delete:hover, .button-delete:active {
+    .button-delete:active {
     -webkit-transform: translate(0px,5px);
     -ms-transform: translate(0px,5px);
     transform: translate(0px,5px);
     border-bottom: 1px solid #2ecc71;
    }
 
-   .switch {
-    font-size: 17px;
-    position: relative;
-    display: inline-block;
-    width: 3.5em;
-    height: 2em;
-   }
-   
-   /* Hide default HTML checkbox */
-   .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-   }
-   
-   /* The slider */
-   .slider {
-    position: absolute;
+   /* BUTTON SAVE */
+   .button {
+    padding: 1.3em 3em;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
     cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    transition: .4s;
-    border-radius: 30px;
+    outline: none;
    }
    
-   .slider:before {
-    position: absolute;
-    content: "";
-    height: 1.4em;
-    width: 1.4em;
-    border-radius: 20px;
-    left: 0.3em;
-    bottom: 0.3em;
-    background-color: white;
-    transition: .4s;
+   .button:hover {
+    background-color: #2EE59D;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
    }
    
-   input:checked + .slider {
-    background-color: #2196F3;
+   .button:active {
+    transform: translateY(-1px);
    }
-   
-   input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
-   }
-   
-   input:checked + .slider:before {
-    transform: translateX(1.5em);
+
+   .button:disabled{
+     background-color: #ff3033;
    }
